objects/SGR_Business_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to indicate if the rule is active or inactive</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Against_Rules_are_run__c</fullName>
        <label>Field Against Rules are run</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impacted__c</fullName>
        <label>Impacted Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAM</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_wording_fail__c</fullName>
        <label>Proposed wording fail</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_wording_pass__c</fullName>
        <label>Proposed wording pass</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Instruction__c</fullName>
        <label>Resolution Instruction</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Code__c</fullName>
        <label>Rule Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <label>Rule Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Type_Desc__c</fullName>
        <label>Rule Type Desc</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Business Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rule_Code__c</columns>
        <columns>Proposed_wording_fail__c</columns>
        <columns>Proposed_wording_pass__c</columns>
        <columns>Level__c</columns>
        <columns>Field_Against_Rules_are_run__c</columns>
        <columns>Rule_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>